After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770305 - file-undo-operations: fix extract undo and redo descriptions
file-undo-operations: fix extract undo and redo descriptions
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-08-23 22:41 UTC by Razvan Chitu
Modified: 2016-08-24 20:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
file-undo-operations: fix extract undo and redo descriptions (1.45 KB, patch)
2016-08-23 22:42 UTC, Razvan Chitu
committed Details | Review

Description Razvan Chitu 2016-08-23 22:41:57 UTC
See patch.
Comment 1 Razvan Chitu 2016-08-23 22:42:01 UTC
Created attachment 334039 [details] [review]
file-undo-operations: fix extract undo and redo descriptions

The undo description is reassigned the description for the redo operation. Fix
this by correctly assigning the redo description.
Comment 2 Carlos Soriano 2016-08-24 19:42:20 UTC
Review of attachment 334039 [details] [review]:

LGTM, thanks!
Comment 3 Razvan Chitu 2016-08-24 20:38:07 UTC
Attachment 334039 [details] pushed as a8a889a - file-undo-operations: fix extract undo and redo descriptions