file-undo-operations: fix extract undo and redo descriptions

The undo description is reassigned the description for the redo operation. Fix
this by correctly assigning the redo description.

https://bugzilla.gnome.org/show_bug.cgi?id=770305